# Jovi_Widget

./: .gitignore  LICENSE  README.md  __init__.py  node_list.json  pyproject.toml  requirements.txt
core/: __init__.py  widget.py
web/: queue.js
