[project]
name = "jovi_widget"
description = "Extension widgets for ComfyUI"
version = "1.0.0"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Alexander G. Morano", email = "amorano@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dependencies = [
    "git+https://github.com/cozy-comfyui/cozy_comfyui@main#egg=cozy_comfyui",
]

[project.urls]
Homepage = "https://github.com/Amorano/Jovi_Widget"
Documentation = "https://github.com/Amorano/Jovi_Widget/wiki"
Repository = "https://github.com/Amorano/Jovi_Widget"
Issues = "https://github.com/Amorano/Jovi_Widget/issues"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "Jovi Widget"
Icon = "https://raw.githubusercontent.com/Amorano/Jovimetrix-examples/refs/heads/master/res/logo-jovi_widget.png"
